crates/typechecker/tests/typechecker/snapshots/main__typechecker__diagnostics__e0301_operator_names_operator_and_type.snap
---
source: crates/typechecker/tests/typechecker/diagnostics.rs
expression: output
---
[E0301] Error: cannot use `+` on `Bool` — `Bool` does not implement `Semigroup`
   ╭─[ ../../tests/fixtures/traits/op_no_instance.kr:2:14 ]
   │
 2 │ fun main() = true + false
   │              ──────┬─────  
   │                    ╰─────── E0301: cannot use `+` on `Bool` — `Bool` does not implement `Semigroup`
   │ 
   │ Help: implement `Semigroup[Bool]` to enable `+` on `Bool`
───╯
