crates/typechecker/tests/typechecker/snapshots/main__typechecker__diagnostics__e0301_unary_neg_names_operator.snap
---
source: crates/typechecker/tests/typechecker/diagnostics.rs
expression: output
---
[E0301] Error: cannot use `-` on `Bool` — `Bool` does not implement `Neg`
   ╭─[ test.kr:1:30 ]
   │
 1 │ fun main() -> Unit = println(-true)
   │                              ──┬──  
   │                                ╰──── E0301: cannot use `-` on `Bool` — `Bool` does not implement `Neg`
   │ 
   │ Help: implement `Neg[Bool]` to enable `-` on `Bool`
───╯
