crates/typechecker/tests/typechecker/snapshots/main__typechecker__diagnostics__e0301_where_bound_names_bound.snap
---
source: crates/typechecker/tests/typechecker/diagnostics.rs
expression: output
---
[E0301] Error: `Secret` does not satisfy the `Show` bound
   ╭─[ ../../tests/fixtures/traits/constrained_fn_ref_missing_instance.kr:8:11 ]
   │
 8 │   let f = show_it[Secret]
   │           ───────┬───────  
   │                  ╰───────── E0301: `Secret` does not satisfy the `Show` bound
   │ 
   │ Help: required by a bound in `show_it` — add `impl Show[Secret]` or a `deriving (Show)` clause
───╯
