crates/typechecker/tests/typechecker/snapshots/main__typechecker__diagnostics__e0307_deriving_unknown_trait_diagnostic.snap
---
source: crates/typechecker/tests/typechecker/diagnostics.rs
expression: output
---
[E0307] Error: unknown trait `Bogus`
   ╭─[ test.kr:1:1 ]
   │
 1 │ type Foo = Foo deriving (Bogus)
   │ ───────────────┬───────────────  
   │                ╰───────────────── E0307: unknown trait `Bogus`
───╯
