crates/typechecker/tests/typechecker/snapshots/main__typechecker__diagnostics__e0515_arity_mismatch_diagnostic.snap
---
source: crates/typechecker/tests/typechecker/diagnostics.rs
expression: output
---
[E0515] Error: import overload arity mismatch: `compute` has 1 parameter(s) in `helpers_a` but 2 in `helpers_c`
   ╭─[ ../../tests/fixtures/modules/overload_arity_error.kr:3:1 ]
   │
 3 │ import helpers_c.{compute}
   │ ─────────────┬────────────  
   │              ╰────────────── E0515: import overload arity mismatch: `compute` has 1 parameter(s) in `helpers_a` but 2 in `helpers_c`
   │ 
   │ Help: rename one import with an alias: `import helpers_c.{compute as alias}`
───╯
