crates/typechecker/tests/typechecker/snapshots/main__typechecker__diagnostics__e0516_local_arity_mismatch_diagnostic.snap
---
source: crates/typechecker/tests/typechecker/diagnostics.rs
expression: output
---
[E0516] Error: local overload arity mismatch for `convert`: definitions have 1 vs 2 parameter(s)
   ╭─[ ../../tests/fixtures/modules/overload_local_arity_error.kr:3:1 ]
   │
 3 │ fun convert(x: String, y: String) -> String = "two"
   │ ─────────────────────────┬─────────────────────────  
   │                          ╰─────────────────────────── E0516: local overload arity mismatch for `convert`: definitions have 1 vs 2 parameter(s)
   │ 
   │ Help: all definitions of `convert` must have the same number of parameters; rename one to a different name
───╯
